2008-09-18  fabian

    * Minor UI change: Double-clicking a bookmark item now launches it.
    * UI change: Now bookmarks are sorted alphabetically.
    
2008-09-17  fabian

    * UI change: now there's separate close warning option plus a ">1" tab option.
    * Minor UI change: now the resize control is also hidden if the scroll bar is hidden.
    * Minor UI change: the optional bottom border's color is now windowFrameColor.
    
2008-09-15  fabian

    * Fixed a bug in the character cache handlings of PTYTextView. A new hash function is used.
    
2008-09-12  fabian

    * Fixed a bug in PTYTask that causes crashes when a session is terminated.
    * Fixed a bug related to window resizing deadlocks.

2008-09-13  delx

    * Check if locale exists before setting LANG environment variables (#2102884)
    * ISO8859-* and eucXX encodings will get correct environment variables
    * Keep menubar when setting full screen mode in a secondary screen (#2090939)
    * Multiple windows can now be in full screen mode, over different spaces and monitors
    

2008-09-11  fabian

    * Fixed a bug that might crashes iTerm when there's a background image.
    * No longer override PATH when launching a program.
    
2008-09-10	fabian

	* Profile name changes or deletion now update bookmarks (bug #1762237).
	* Add bookmark dialog now clears the text entries, and automatically 
	  fills profiles from the selected bookmark (#1815642).
	* Tweaked full screen code to allow it work better with multiple monitors.
	* Added "xterm" into the terminal type drop box.
	
2008-09-09	fabian

	* Fixed a bug that crashes iTerm when one scrolls up with a lot of new text coming in.
    * Fixed a UTF decoding problem (#1867339, by sakamoto).
    * Fixed a bug when detecting user scroll.
    * Cleaned up code for 0.9.5.0909
	* Fixed a configure panel bug that fails to update the "blur" info.

2008-09-08	fabian

	* UI change: mid-button to paste -> mid-button to paste from clipboard.